--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ img{
         
         padding: 2%;
         font-family: Comic Sans MS;
-        background: linear-gradient(45deg, #FF4E50, #F9D423);
+        background: linear-gradient(45deg, #6a92d2, #aad1ff);
         margin: auto;
         position: relative;
         width: 45%;
@@ -115,7 +115,7 @@ img{
     #box{
         padding: 2%;
         font-family: Comic Sans MS;
-        background: linear-gradient(45deg, #FF4E50, #F9D423);
+        background: linear-gradient(45deg, #6a92d2, #aad1ff);
         margin: auto;
         position: relative;
         width: 90%;
